[tool.poetry]
name = "tqdm-loggable"
version = "0.1.4"
description = "TQDM progress bar friendliness for non-interactive terminals and logging output"
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tqdm_loggable"}]
homepage = "https://tradingstrategy.ai"
repository = "https://github.com/tradingstrategy-ai/tqdm-loggable"
keywords = ["logging", "tqdm", "sentry", "logstash", "progress bar", "datadog", "new relic"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
jupyterlab = "^3.5.0"
ipywidgets = ">=7.0,<8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Entry point to our terminal detector
[tool.poetry.scripts]
manual-tests = "tqdm_loggable.manual_tests:main"

